# be-task-ca

./: README.md  docker-compose.yml  pyproject.toml  scripts.py
be_task_ca/: app.py  commands.py  common.py  database.py
be_task_ca/item/api/: api.py  schema.py
be_task_ca/item/entities/: item.py
be_task_ca/item/interfaces/: item_interface.py
be_task_ca/item/repos/: model.py  repository.py
be_task_ca/item/usecases/: usecases.py
be_task_ca/user/api/: api.py  schema.py
be_task_ca/user/entities/: cart_item.py  user.py
be_task_ca/user/interfaces/: user_interface.py
be_task_ca/user/repos/: model.py  repository.py
be_task_ca/user/usecases/: usecases.py
postman/: inventory.postman_collection.json  user.postman_collection.json  workspace.postman_globals.json
tests/: test_item_e2e.py  test_user_e2e.py
tests/unit/: test_item_repo.py  test_item_usecase.py  test_user_repo.py  test_user_usecase.py
